# renta

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  renta.yaml.example  requirements.in  requirements.txt
docs/referencia/: README.md  deducciones_autonomicas_cv_2025.md  gastos_deducibles_2025_template.xlsx  sample_transactions.xlsx
docs/spec/: README.md  dividendos.md  etfs_acciones.md  gastos_deducibles.md
src/renta/: __init__.py  __main__.py
src/renta/compensation/: __init__.py  calculator.py  models.py  report.py
src/renta/cuentas/: __init__.py  calculator.py  models.py  parser.py  report.py
src/renta/cuentas/templates/: report.txt.j2
src/renta/dividends/: __init__.py  calculator.py  ecb.py  models.py  parser.py  report.py
src/renta/etfs/: __init__.py  fifo.py  models.py  parser.py  report.py  wash_sale.py
src/renta/gastos/: __init__.py  calculator.py  categories.py  models.py  reader.py  report.py  template.py
src/renta/summary/: __init__.py  report.py
src/renta/utils/: __init__.py  exceptions.py  money.py
tests/: conftest.py
tests/assets/: create_sample_etf_regression.py  sample_etf_transactions.xlsx
tests/compensation/: test_calculator.py
tests/cuentas/: test_calculator.py  test_parser.py
tests/dividends/: conftest.py  test_calculate.py  test_calculator.py  test_integration.py
tests/dividends/fixtures/: create_sample_account.py  sample_account.xlsx
tests/etfs/: test_fifo.py  test_integration.py  test_parser.py  test_wash_sale.py
tests/etfs/fixtures/: create_sample.py  sample_transactions.xlsx
(+4 files in other folders)
