[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renta"
version = "0.1.0"
description = "Herramienta para calcular la declaración de la renta española (ETFs, acciones, cuentas remuneradas)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
renta = "renta.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "-v --doctest-modules"

[tool.coverage.run]
source = ["renta"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
